final poc changes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=MongoDBLearn
+
+spring.data.mongodb.uri=mongodb+srv://root:root@mongolearn.nw7wcit.mongodb.net/?retryWrites=true&w=majority&appName=Mongolearn
+
+spring.data.mongodb.database=mongodb
